<resources>
    <string name="app_name">欢宠APPLiu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--修改个人信息-->
    <string name="nike_face">头像</string>
    <string name="nick_name">名称</string>
    <string name="sexy">性别</string>
    <string name="ddyymm">出生年月</string>
    <string name="phone">手机</string>
    <string name="wachat">微信</string>
    <string name="QQ">QQ</string>
    <string name="address">联系地址</string>
    <string name="Take_pictures">拍照</string>
    <string name="album">相册</string>
    <string name="cancel">取消</string>

    <string name="men">男</string>
    <string name="women">女</string>
    <string name="city">城市</string>
    <string name="The_specific_address">具体地址</string>

    <!--添加宠物-->
    <string name="pet_name">昵称</string>
    <string name="pet_type">宠物类型</string>
    <string name="Whether_the_sterilization">是否绝育</string>
    <string name="Date_of_birth">出生日期</string>
    <string name="pet_weight">体重</string>
    <string name="The_immune_condition">免疫情况</string>
    <string name="pet_profile">宠物简介</string>

    <string name="no_result">对不起，没有搜索到相关数据！</string>

</resources>

