<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corners"
        android:layout_margin="20px"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:gravity="center"
            android:text="更换用户头像"
            android:textColor="@color/colorGreyDark"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/colorGreyDark" />

        <TextView
            android:id="@+id/btn_to_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:gravity="center"
            android:text="@string/Take_pictures"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/colorGreyDark" />

        <TextView
            android:id="@+id/btn_to_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:gravity="center"
            android:text="@string/album"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:background="@drawable/bg_corners"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_to_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

    </LinearLayout>


</LinearLayout>
