<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_layout"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="25px"
        android:background="@color/colorGreyBottom" />

    <RelativeLayout
        android:id="@+id/modification_face"
        android:layout_width="match_parent"
        android:layout_height="170px">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="21dp"
            android:text="@string/nike_face"
            android:textSize="@dimen/text_title"
            android:textColor="@color/colorBlack" />

        <com.iblood.tools.CircleImageView
            android:id="@+id/iv_head"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:layout_toStartOf="@+id/textView5"
            android:background="@mipmap/user_defaults" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/personal_enter_img" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorGreyDark"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="330px"
        android:divider="@color/colorBlack"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/modification_name"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:divider="@color/colorBlack"
            android:layout_weight="1">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:text="@string/nick_name"
                android:textSize="@dimen/text_title"
                android:textColor="@color/colorBlack"
                android:id="@+id/textView6" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="62dp"
                android:visibility="gone"
                android:layout_marginStart="62dp"
                android:layout_toEndOf="@+id/textView6"
                android:layout_toRightOf="@+id/textView6"
                android:text="" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/personal_enter_img" />


        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/colorGreyDark"></View>
        <RelativeLayout
            android:id="@+id/modification_sexy"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:divider="@color/colorBlack"
            android:layout_weight="1">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:text="@string/sexy"
                android:textSize="@dimen/text_title"
                android:textColor="@color/colorBlack"
                android:id="@+id/textView9" />

            <TextView
                android:id="@+id/user_sexy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="63dp"
                android:layout_marginStart="63dp"
                android:visibility="gone"
                android:layout_toEndOf="@+id/textView9"
                android:layout_toRightOf="@+id/textView9"
                android:text="" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/personal_enter_img" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/colorGreyDark"></View>
        <RelativeLayout
            android:id="@+id/modification_ddyymm"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:divider="@color/colorBlack"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:text="@string/ddyymm"
                android:textSize="@dimen/text_title"
                android:textColor="@color/colorBlack"
                android:id="@+id/textView10" />


            <TextView
                android:id="@+id/user_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp"
                android:visibility="gone"
                android:layout_toEndOf="@+id/textView10"
                android:layout_toRightOf="@+id/textView10"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/personal_enter_img" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="25px"
        android:background="@color/colorGreyBottom" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="440px"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/modification_phone"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:divider="@color/colorBlack"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:text="@string/phone"
                android:textSize="@dimen/text_title"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="64dp"
                android:layout_marginStart="64dp"
                android:visibility="gone"
                android:layout_toEndOf="@+id/textView11"
                android:layout_toRightOf="@+id/textView11"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/personal_enter_img" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/colorGreyDark"></View>
        <RelativeLayout
            android:id="@+id/modification_wachat"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:divider="@color/colorBlack"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:text="@string/wachat"
                android:textSize="@dimen/text_title"
                android:textColor="@color/colorBlack"
                android:id="@+id/textView14" />

            <TextView
                android:id="@+id/user_wachat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="64dp"
                android:layout_marginStart="64dp"
                android:visibility="gone"
                android:layout_toEndOf="@+id/textView14"
                android:layout_toRightOf="@+id/textView14"
                android:text="" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/personal_enter_img" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/colorGreyDark"></View>

        <RelativeLayout
            android:id="@+id/modification_QQ"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:divider="@color/colorBlack">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:text="@string/QQ"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_title" />

            <TextView
                android:id="@+id/user_QQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="13dp"
                android:layout_toStartOf="@+id/textView24"
                android:textColor="@color/colorBlack"
                android:text="未完善信息" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/personal_enter_img" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/colorGreyDark"></View>
        <RelativeLayout
            android:id="@+id/modification_address"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:divider="@color/colorBlack"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:text="@string/address"
                android:textSize="@dimen/text_title"
                android:textColor="@color/colorBlack"
                android:id="@+id/textView16" />


            <TextView
                android:id="@+id/user_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:layout_marginStart="35dp"
                android:visibility="gone"
                android:layout_toEndOf="@+id/textView16"
                android:layout_toRightOf="@+id/textView16"
                android:text="" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/personal_enter_img" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/colorGreyDark"></View>
    </LinearLayout>

</com.zhy.autolayout.AutoLinearLayout>
